--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
     <string name="action_settings">Settings</string>
     <string name="app_id">391343381073349</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="google_maps_activity">AIzaSyBdvB3CxgwTz9gVKIeAjx5teRHdiHBYqq8</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
